Fixups for Quality

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,11 @@ DB_PATH=/app/data/slavarr.db
 PORT=3001
 INVITE_PERMISSIONS=414464720896  # Manage Messages + Send + View Channels + etc.
 
+# Root folders (no UI prompt; these are used automatically)
+# Change these only if your Radarr/Sonarr root folders are different.
+SONARR_ROOT_FOLDER=/tv
+RADARR_ROOT_FOLDER=/movies
+
 
 # Plex (optional, used for existence checks)
 PLEX_URL=http://localhost:32400
