Update for tracking

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,8 @@ PLEX_SERIES_SECTION_ID=2
 
 # If you know your TV Shows library section id (e.g., 2), set it
 PLEX_SHOWS_SECTION_ID=2
+
+# Transmission (optional, for live download progress)
+TRANSMISSION_URL=http://localhost:9091/transmission/rpc
+TRANSMISSION_USER=
+TRANSMISSION_PASSWORD=
